# Coln

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  cabal.project  default.nix  flake.nix  justfile  shell.nix
.github/workflows/: check.yml  deploy.yml  extension.yml  store-sync-web-demo.yml  sync-demo.yml  web-demo.yml  web-demos.yml
build-support/: haskell.just
coln-engine/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix  justfile
coln-engine/crates/geomerge/: Cargo.toml
coln-engine/crates/geomerge/examples/: mlir.glog
coln-engine/crates/geomerge/src/: lib.rs  ops.rs  persist.rs  store.rs  table.rs  transaction.rs
coln-engine/crates/geomerge/src/commit/: author.rs  chunk.rs  error.rs  graph.rs  hash.rs  hash_dict.rs  leb128.rs  mod.rs  pst.rs  utils.rs  wire.rs
coln-engine/crates/geomerge/src/commit/wire/: data.rs  metadata.rs  mod.rs  root.rs
coln-engine/crates/geomerge/src/ir/: path.rs
coln-engine/crates/geomerge/src/persist/: error.rs  hash_dict.rs  mod.rs  pst.rs  ptbl.rs  utils.rs
coln-engine/crates/geomerge/src/repl/: error.rs  exe.rs  mod.rs  parse.rs
coln-engine/crates/geomerge/src/solver/: bind.rs  compile.rs  datalog.rs  matcher.rs  validate.rs
coln-engine/crates/geomerge/src/store/: error.rs  mod.rs
coln-engine/crates/geomerge/src/txn/: inner.rs  mod.rs  ops.rs
coln-engine/crates/geomerge/tests/: test_path.rs  test_repl.rs  test_repl_transact.rs
coln-engine/crates/geomerge/tests/data/: paths.json
coln-engine/docs/: commit-layer.md  storage-primitives.md
coln-engine/examples/: mlir.glog
coln-engine/scripts/: check.sh  coverage.sh
coln-engine/src/: lib.rs  main.rs  store.rs  table.rs  transaction.rs
coln-engine/tests/: test_path.rs
diagnostician/: CHANGELOG.md  diagnostician.cabal
diagnostician/src/: Diagnostician.hs
docs/: geolog.agda-lib  geolog.bib  geomerge.tex  geott.tex  grammar.dj  index.dj  initial-models.tex  lecture2.tex  lecture2.tex.disabled  lecture3.tex  macros.sty  namespacing.dj  prospectus.tex  vision.tex  why.bib  why.tex
docs/lectures/: lecture2.lagda  lecture3.tex
docs/prospectus/: main.tex
examples/: index.html  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  style.css
examples/compiler/: index.html  justfile  package.json
examples/compiler-demo/: index.html
examples/store-sync/: README.md  package.json  pnpm-workspace.yaml
examples/sync-demo/: README.md  compile.sh  index.html  package.json  tsconfig.json  vite.config.ts
examples/web-demo/: README.md  compile.sh  package.json  playwright.config.ts  pnpm-lock.yaml  server.mjs  vite.config.ts
fnotation/: CHANGELOG.md  fnotation.cabal
fnotation/src/: FNotation.hs
fnotation/src/FNotation/: Config.hs  Kinds.hs  Lexer.hs  Names.hs  Parser.hs  Pretty.hs  Tokens.hs  Trees.hs
fnotation/test/: 1-char.output  2-char.output  Main.hs  arithmetic.output  double-annot.output  monoid.output  tuple.ntn  tuple.output
fnotation/test/Test/FNotation/: Common.hs  Golden.hs
fnotation/test/Test/FNotation/Golden/: app-and-proj.ntn  app-and-proj.output  arithmetic.ntn  arithmetic.output  modifier.ntn  modifier.output  monoid.ntn  monoid.output  names.output  tuple.ntn
fnotation/test/Test/FNotation/Property/: Lexing.hs  Parsing.hs
geolog-lang/: default.nix  geolog-lang.cabal  shell.nix
geolog-lang/src/Geolog/: Common.hs  Core.hs  CoreOperations.hs  Diagnostician.hs  Diagnostics.hs  Elaboration.hs  Elaborator.hs  Evaluation.hs  Lexer.hs  Notation.hs  Parser.hs  Pretty.hs  Token.hs
geolog-lang/src/Geolog/Core/: Conversion.hs  Evaluation.hs  Memoed.hs  Params.hs  Print.hs  Readback.hs  Syntax.hs  Value.hs
geolog-lang/src/Geolog/Diagnostician/: CodeMeta.hs
geolog-lang/src/Geolog/Diagnostics/: Code.hs
geolog-lang/src/Geolog/Elaborator/: Diagnostics.hs  Environment.hs  Parse.hs
geolog-lang/src/Geolog/Elaborator/Rules/: Builtin.hs  Equality.hs  Universe.hs  Variable.hs
geolog-lang/src/Geolog/Lexer/: Diagnostics.hs
geolog-lang/src/Geolog/Parser/: Diagnostics.hs
geolog-lang/src/Geolog/old/: Elaboration.hs  Evaluation.hs
geolog-lang/test/: Main.hs  ancestor.output  arithmetic.lexed  arithmetic.ntn  arithmetic.output  double-annot.lexed  double-annot.ntn  double-annot.output  fb3.glog  fb3.output  graph-of-graphs.glog  graph-of-graphs.output  lambda.output  magma.glog  magma.output  mathieu.glog  mathieu.output  modular-lattice.glog  modular-lattice.output  monoid-glog.output  monoid.lexed  monoid.ntn  monoid.output  nominal.glog  nominal.output  or.glog  or.output  paths.glog  paths.output  ssa.glog  ssa.output  tuple.output  weighted.glog  weighted.output
geolog-lsp/: .gitignore  Cargo.toml  geolog-lsp.cabal
geolog-lsp/client/: .gitignore  package-lock.json  package.json
geolog-lsp/client/src/: extension.ts
geolog-lsp/scripts/: package.sh
geolog-lsp/src/: Main.hs  lexer.rs  main.rs
geolog-lsp/src/Geolog/: LSP.hs
geolog-lsp/src/Geolog/LSP/: Buffer.hs  ConfigChange.hs  Diagnostics.hs  DocChange.hs  Highlight.hs  Hover.hs  Types.hs  Utils.hs
geolog-repl/: geolog-repl.cabal
geolog-repl/src/: Main.hs
geolog-shake/: CHANGELOG.md  geolog-shake.cabal
geolog-shake/app/: Forester.hs  Main.hs
licenses/: MIT.txt
manual/: checksums.txt  forest.toml
manual/templates/: plain.tree
manual/theme/: forester.js  style.css  tree.xsl
manual/trees/: 0001.tree  0002.tree  0003.tree  000B.tree  000C.tree  000D.tree  000E.tree  000G.tree  000H.tree  000I.tree  000K.tree  000L.tree  000M.tree  000N.tree  000O.tree  000R.tree  000S.tree  000W.tree  000Y.tree  0014.tree  0015.tree  0016.tree  0017.tree  0018.tree  0019.tree  001B.tree  001C.tree  001D.tree  001E.tree  001G.tree  001H.tree  001I.tree  001J.tree  001K.tree  001L.tree  001M.tree  001N.tree  001O.tree  001P.tree  001Q.tree  (+44 more)
nix/: coln-do.nix  forester.nix  haskell-packages.nix  nixpkgs.nix
notes/: geolog.bib  geott-mini.tex  geott.tex  grammar.dj  hlevel.tex-source  homs.dj  index.dj  initial-models.tex  macros.sty  mlevel.tex-source  namespacing.dj  prospectus.tex  why-critique.md  why.bib  why.tex
(+93 files in other folders)
