[workspace]
members = [
  "packages/coln-js-runtime",
  "packages/coln-flir-rs",
  "packages/coln-store",
  "packages/coln-query",
  "packages/coln-batch"
]
resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["The Coln Authors"]
description = "A proof assistant with database characteristics"
homepage = "https://github.com/coln-project/Coln"
repository = "https://github.com/coln-project/Coln"

# Useful if we want to align on one version of a shared dependency.
[workspace.dependencies]
anyhow = "1.0.102"
criterion = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
