cabal-version:   3.4
name:            diagnostician
version:         0.1.0.0
license:         MPL-2.0
license-file:    LICENSE
maintainer:      root@owenlynch.org
author:          Owen Lynch
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:    Diagnostician
    hs-source-dirs:     src
    default-language:   GHC2024
    default-extensions:
        BlockArguments CPP TypeData DerivingVia FunctionalDependencies
        ImplicitParams MagicHash NoFieldSelectors OrPatterns
        OverloadedRecordDot OverloadedStrings PatternSynonyms QualifiedDo
        StrictData TemplateHaskell TypeFamilies TypeFamilyDependencies
        UnboxedSums UnboxedTuples UnicodeSyntax ViewPatterns

    ghc-options:        -Wall
    build-depends:
        base ^>=4.21.0.0,
        containers,
        prettyprinter,
        text,
        vector

test-suite diagnostician-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   GHC2024
    default-extensions:
        BlockArguments CPP TypeData DerivingVia FunctionalDependencies
        ImplicitParams MagicHash NoFieldSelectors OrPatterns
        OverloadedRecordDot OverloadedStrings PatternSynonyms QualifiedDo
        StrictData TemplateHaskell TypeFamilies TypeFamilyDependencies
        UnboxedSums UnboxedTuples UnicodeSyntax ViewPatterns

    ghc-options:        -Wall
    build-depends:
        base ^>=4.21.0.0,
        containers >=0.7,
        diagnostician
