cabal-version:   3.4
name:            fnotation
version:         0.1.1.0
license:         MPL-2.0
license-file:    LICENSE
maintainer:      root@owenlynch.org
author:          Owen Lynch
description:
    A lower house syntax for programming language experimentation.

category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        FNotation
        FNotation.Config
        FNotation.Lexer
        FNotation.Names
        FNotation.Parser
        FNotation.Pretty
        FNotation.Tokens
        FNotation.Trees

    hs-source-dirs:     src
    default-language:   GHC2024
    default-extensions:
        BlockArguments CPP TypeData DerivingVia FunctionalDependencies
        ImplicitParams MagicHash NoFieldSelectors OrPatterns
        OverloadedRecordDot OverloadedStrings PatternSynonyms QualifiedDo
        StrictData TypeFamilies TypeFamilyDependencies UnboxedSums
        UnboxedTuples UnicodeSyntax ViewPatterns

    ghc-options:        -Wall
    build-depends:
        base ^>=4.21.0.0,
        containers,
        diagnostician,
        hashable,
        prettyprinter,
        text,
        vector,
        vector-hashtables >=0.1.2.1

test-suite fnotation-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   GHC2024
    default-extensions:
        BlockArguments CPP TypeData DerivingVia FunctionalDependencies
        MagicHash NoFieldSelectors OrPatterns OverloadedRecordDot
        OverloadedStrings PatternSynonyms QualifiedDo StrictData
        TypeFamilies TypeFamilyDependencies UnboxedSums UnboxedTuples
        UnicodeSyntax ViewPatterns

    ghc-options:        -Wall
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        diagnostician,
        filepath,
        fnotation,
        prettyprinter,
        tasty,
        tasty-golden,
        temporary,
        text,
        vector
