cabal-version:   3.4
name:            geolog-lang
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      root@owenlynch.org
author:          Owen Lynch
description:     The geolog language
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Geolog.Common
        Geolog.Core
        Geolog.Diagnostics
        Geolog.Diagnostics.Code
        Geolog.Elaboration
        Geolog.Evaluation
        Geolog.Lexer
        Geolog.Notation
        Geolog.Parser
        Geolog.Pretty
        Geolog.Token
        Geolog.Unification

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
        BlockArguments CPP DataKinds DeriveFoldable DeriveFunctor
        DeriveTraversable DerivingVia EmptyCase EmptyDataDeriving
        ExplicitNamespaces FunctionalDependencies
        GeneralizedNewtypeDeriving ImplicitParams ImportQualifiedPost
        InstanceSigs KindSignatures LambdaCase MagicHash
        MultiParamTypeClasses NoFieldSelectors OverloadedRecordDot
        OverloadedStrings PatternSynonyms PolyKinds QualifiedDo
        StandaloneKindSignatures Strict TemplateHaskell TypeFamilies
        TypeFamilyDependencies TypeOperators UnboxedSums UnboxedTuples
        UnicodeSyntax ViewPatterns

    ghc-options:
        -Wall -funbox-strict-fields -Wno-unused-imports
        -Wno-unused-top-binds

    build-depends:
        base,
        bytestring,
        containers,
        directory,
        filepath,
        hashable,
        microlens-platform,
        mtl,
        prettyprinter,
        singletons,
        singletons-th,
        symbolize,
        text >=2.1.1,
        vector,
        vector-hashtables

test-suite geolog-lang-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   GHC2021
    default-extensions:
        BlockArguments CPP DataKinds DeriveFoldable DeriveFunctor
        DeriveTraversable DerivingVia EmptyCase EmptyDataDeriving
        ExplicitNamespaces FunctionalDependencies
        GeneralizedNewtypeDeriving ImplicitParams ImportQualifiedPost
        InstanceSigs KindSignatures LambdaCase MagicHash
        MultiParamTypeClasses NoFieldSelectors OverloadedRecordDot
        OverloadedStrings PatternSynonyms PolyKinds QualifiedDo
        StandaloneKindSignatures Strict TemplateHaskell TypeFamilies
        TypeFamilyDependencies TypeOperators UnboxedSums UnboxedTuples
        UnicodeSyntax ViewPatterns

    ghc-options:        -Wall -g
    build-depends:
        base,
        bytestring,
        filepath,
        geolog-lang,
        prettyprinter,
        tasty,
        tasty-golden,
        temporary >=1.3,
        text >=2.1.1,
        vector
