cabal-version: 3.4
name: geolog-lang
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
maintainer: root@owenlynch.org
author: Owen Lynch
description: The geolog language
category: Language
build-type: Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    Geolog.Common
    Geolog.Core
    Geolog.Core.Conversion
    Geolog.Core.Evaluation
    Geolog.Core.Params
    Geolog.Core.Readback
    Geolog.Core.Syntax
    Geolog.Core.Value
    Geolog.CoreOperations
    Geolog.Diagnostics
    Geolog.Elaborator
    Geolog.Notation
    Geolog.Pretty
    Geolog.Unification

  hs-source-dirs: src
  default-language: GHC2024
  default-extensions:
    BlockArguments
    CPP
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    ImplicitParams
    MagicHash
    NoFieldSelectors
    OrPatterns
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    StrictData
    TemplateHaskell
    TypeData
    TypeFamilies
    TypeFamilyDependencies
    UnboxedSums
    UnboxedTuples
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -funbox-strict-fields
    -Wno-unused-imports
    -Wno-unused-top-binds
    -Wno-name-shadowing

  build-depends:
    base,
    bytestring,
    containers,
    diagnostician,
    directory,
    filepath,
    fnotation,
    hashable,
    prettyprinter,
    singletons,
    singletons-th,
    text,
    vector,
    vector-hashtables,

test-suite geolog-lang-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: GHC2024
  default-extensions:
    BlockArguments
    CPP
    DerivingVia
    FunctionalDependencies
    ImplicitParams
    MagicHash
    NoFieldSelectors
    OrPatterns
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    StrictData
    TemplateHaskell
    TypeData
    TypeFamilies
    TypeFamilyDependencies
    UnboxedSums
    UnboxedTuples
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -g

  build-depends:
    base,
    bytestring,
    containers,
    diagnostician,
    filepath,
    fnotation,
    geolog-lang,
    prettyprinter,
    tasty,
    tasty-golden,
    temporary >=1.3,
    text >=2.1.1,
    vector,
