[package]
name = "geomerge"
version = "0.1.0"
edition = "2024"

[dependencies]
geolog-lang = { path = "../geolog-lang", features = ["serde"] }
hexane = { git = "https://github.com/automerge/automerge", branch = "hexane_v1", package = "hexane" }
postcard = { version = "1.1.3", features = ["alloc"] }
rustyline = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
