[package]
name = "geomerge"
version = "0.1.0"
edition = "2024"

[dependencies]
geolog-lang = { path = "../geolog-lang", features = ["serde"] }
hex = "0.4.3"
hexane = { git = "https://github.com/automerge/automerge", branch = "hexane_v1", package = "hexane" }
leb128 = "0.2.6"
postcard = { version = "1.1.3", features = ["alloc"] }
rustyline = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
shlex = "1.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
